แก้ชื่อหน่วยงานเป็นสถาบันส่งเสริมงานสอบสวน

--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@ body::after{content:'';position:fixed;inset:0;background-image:linear-gradient(r
     <div class="header-top">
       <div class="header-brand">
         <div class="emblem"><svg viewBox="0 0 24 24"><path d="M12 2L3.5 7v10L12 22l8.5-5V7L12 2zm0 2.16L18.5 8v8L12 19.84 5.5 16V8L12 4.16z"/><path d="M12 8v8M8 10v4M16 10v4"/></svg></div>
-        <div class="org-info">สำนักงานตำรวจแห่งชาติ<strong>สำนักงานคณะกรรมการข้าราชการตำรวจ (สบส.)</strong></div>
+        <div class="org-info">สำนักงานตำรวจแห่งชาติ<strong>สถาบันส่งเสริมงานสอบสวน (สบส.)</strong></div>
       </div>
       <div class="header-meta"><span><span class="live-dot"></span>ข้อมูลล่าสุด</span><strong id="currentDate"></strong></div>
     </div>
@@ -150,7 +150,7 @@ body::after{content:'';position:fixed;inset:0;background-image:linear-gradient(r
     <button class="f-btn" onclick="filterCards('not-started',this)">ยังไม่เริ่ม</button>
   </div>
   <div class="cards-grid" id="cardsGrid"><div class="loading"><span class="spin"></span>กำลังโหลดข้อมูล...</div></div>
-  <footer class="footer">รายงานผลการดำเนินงานคณะทำงานย่อย ตามคำสั่ง สบส. ที่ 9/2569 · สำนักงานคณะกรรมการข้าราชการตำรวจ</footer>
+  <footer class="footer">รายงานผลการดำเนินงานคณะทำงานย่อย ตามคำสั่ง สบส. ที่ 9/2569 · สถาบันส่งเสริมงานสอบสวน</footer>
 </div>
 <script>
 const STATUS_TEXT={complete:'เสร็จสิ้น',progress:'กำลังดำเนินการ',delayed:'ล่าช้า','not-started':'ยังไม่เริ่ม'};
